fixed timelign alignment

--- a/assets/sass/_theme/blocks/timeline.sass
+++ b/assets/sass/_theme/blocks/timeline.sass
@@ -87,8 +87,8 @@
                     cursor: default
                     opacity: 0.3
         .timeline-event
-            margin: 0 calc(var(--grid-gutter) / 2)
-            width: 50%
+            padding: 0 calc(var(--grid-gutter) / 2)
+            width: columns(4)
             .title
                 display: block
                 min-height: var(--min-title-height)
@@ -130,6 +130,7 @@
                 position: absolute
                 top: calc(#{$spacing-4/2} + var(--min-title-height))
             .timeline-event
+                margin-right: 0
                 padding-right: 0
                 width: 75%
                 .line
